fix: modal overflow

--- a/src/renderer/assets/scss/_common.scss
+++ b/src/renderer/assets/scss/_common.scss
@@ -74,7 +74,7 @@ h6 {
 
 .overflow{
   &_auto{
-    overflow: visible;
+    overflow: visible !important;
   }
 }
 
